[tool.poetry]
name = "Zuvio-auto"
version = "0.1.0"
description = ""
authors = ["oxygen-TW <oxygen5307@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.8.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
